--- a/gateway/build.gradle
+++ b/gateway/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.2'
+    id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -14,13 +14,16 @@ repositories {
 }
 
 ext {
-    set('springCloudVersion', "2020.0.0")
+    set('springCloudVersion', "2020.0.2")
 }
 
 dependencies {
     implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
     implementation 'org.springframework.cloud:spring-cloud-starter-gateway'
     implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    //implementation 'org.springframework.cloud:spring-cloud-sleuth-autoconfiguration:3.0.2'
+    //implementation 'org.springframework.cloud:spring-cloud-sleuth-brave:3.0.2'
+    //implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:3.2.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
