--- a/service/build.gradle
+++ b/service/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-    id 'org.springframework.boot' version '2.4.2'
+    id 'org.springframework.boot' version '2.4.4'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
 }
@@ -19,8 +19,9 @@ ext {
 
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
-    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin'
-    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth'
+    implementation 'org.springframework.cloud:spring-cloud-sleuth-zipkin:3.0.2'
+    implementation 'org.springframework.cloud:spring-cloud-starter-sleuth:3.0.2'
+    //implementation 'io.opentracing.contrib:opentracing-spring-jaeger-cloud-starter:3.2.2'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
